--- a/views/index.jade
+++ b/views/index.jade
@@ -4,9 +4,14 @@ html
 		title= title
 		link(rel="stylesheet",href="styles/styles.css")
 	body
+		#container
+	
 		include templates/layout
 		include templates/pages/index
+		include templates/pages/games
 		include templates/pages/about
+		include templates/pages/blog
+		include templates/pages/media
 
-	script(src="scripts/libs.js")
-	script(src="scripts/client.js")
+		script(src="scripts/libs.js")
+		script(src="scripts/client.js")
