--- a/views/templates/layout.jade
+++ b/views/templates/layout.jade
@@ -1,9 +1,13 @@
 script(type="text/x-handlebars")
 		nav
 			h1
-				| {{#link-to 'index'}}Home{{/link-to}}
-			| {{#link-to 'games'}}Games{{/link-to}}
-			| {{#link-to 'about'}}About{{/link-to}}
-			| {{#link-to 'blog'}}Blog{{/link-to}}
-			| {{#link-to 'media'}}Media{{/link-to}}
+				| {{#link-to 'index'}}
+				img(src='/assets/logo.png',alt='Langenium',width='215',height='96')
+				| Home
+				| {{/link-to}}
+			ul#main_menu
+				li {{#link-to 'games'}}Games{{/link-to}}
+				li {{#link-to 'about'}}About{{/link-to}}
+				li {{#link-to 'blog'}}Blog{{/link-to}}
+				li {{#link-to 'media'}}Media{{/link-to}}
 		| {{outlet}}
