--- a/views/index.jade
+++ b/views/index.jade
@@ -11,6 +11,7 @@ html
 		include templates/pages/games
 		include templates/pages/about
 		include templates/pages/blog
+		include templates/pages/posts
 		include templates/pages/media
 
 		script(src="scripts/libs.js")
