--- a/views/templates/pages/index.jade
+++ b/views/templates/pages/index.jade
@@ -1,6 +1,19 @@
 script(type="text/x-handlebars", id="index")
-	h2 Home
-	ul
-		| {{#each item in model}}
-		li {{item}}
-		| {{/each}}
+	#page
+		#content
+			ul.slideshow
+				li
+					a(href='#')
+						img(src='/assets/featured.png')
+					a(href='#')
+						h3 Title of the slide
+					p Bacon ipsum dolor sit amet pork chop drumstick chuck ribeye spare ribs corned beef. Cow filet mignon shankle, ground round pig sausage jerky beef ribs brisket ribeye.
+		#sidebar
+			ul
+				| {{#each item in model.news}}
+				li 
+					| {{#link-to "posts" item.post_id}}
+					h3 {{item.title}}
+					| {{/link-to}}
+					p {{item.description}}
+				| {{/each}}
