Beginning to implement socket.io
Still trying to decide how to structure that. It may end up in it's own
class as it would be nice to have corresponding response/request actions in the same place.

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,4 +15,5 @@ html
 		include templates/pages/media
 
 		script(src="scripts/libs.js")
+		script(src="socket.io/socket.io.js")
 		script(src="scripts/client.js")
