Looking to dump Browserify. The 1+ min build times are simply not worth any kind of benefit that this techique can deliver. All testing and dev is a nightmare right now.
This is the final build with Browserify, moving to a script.jade file

--- a/views/templates/pages/about.jade
+++ b/views/templates/pages/about.jade
@@ -1,6 +1,14 @@
 script(type="text/x-handlebars", id="about")
-	h2 About
-	ul
-		| {{#each item in model}}
-		li {{item}}
-		| {{/each}}
+	#page
+		#sidebar
+			ul
+				li Introduction to the Langenium franchise
+				li How it began
+				li Current status
+				li Future Direction
+				li Github repos - Universe and main
+		#content
+			ul
+				| {{#each item in model}}
+				li {{item}}
+				| {{/each}}
