--- a/views/templates/pages/games.jade
+++ b/views/templates/pages/games.jade
@@ -1,3 +1,12 @@
 script(type="text/x-handlebars", id="games")
-	h2 Games
-	
+	#page
+		#sidebar
+			ul
+				li Epoch Exordium (Alpha)- /games/epoch-exordium (previously under /tests/epoch-exordium-test1.html)
+				li Langenium MMO Preview - /games/mmo-preview (previously /play)
+				li Prototypes - /games/prototypes/ Rapidly developed experiments for new functionality
+					ul
+						li Epoch Exordium
+						li Procedural Models
+						li Procedural Textures
+		#content
