--- a/views/templates/pages/media.jade
+++ b/views/templates/pages/media.jade
@@ -1,3 +1,8 @@
 script(type="text/x-handlebars", id="media")
-	h2 Media
-	
+	#page
+		#sidebar
+			ul
+				li 3D Models 
+				li Concept art
+				li Screenshots
+		#content
