Using proper data adapter from Ember.
Going to work on determining next set of priorities

--- a/views/templates/pages/blog.jade
+++ b/views/templates/pages/blog.jade
@@ -4,9 +4,10 @@ script(type="text/x-handlebars", id="blog")
 			ul
 				| {{#each item in model}}
 				li 
-					| {{#link-to 'posts' item.post_id}}
+					| {{#link-to 'posts' item.id}}
 					| {{item.title}}
 					| {{/link-to}}
 				| {{/each}}
 		#content
 			| {{outlet}}
+		
