--- a/views/templates/pages/index.jade
+++ b/views/templates/pages/index.jade
@@ -10,9 +10,9 @@ script(type="text/x-handlebars", id="index")
 					p Bacon ipsum dolor sit amet pork chop drumstick chuck ribeye spare ribs corned beef. Cow filet mignon shankle, ground round pig sausage jerky beef ribs brisket ribeye.
 		#sidebar
 			ul
-				| {{#each item in model.news}}
+				| {{#each item in model}}
 				li 
-					| {{#link-to "posts" item.post_id}}
+					| {{#link-to "posts" item.id}}
 					h3 {{item.title}}
 					| {{/link-to}}
 					p {{item.description}}
