- Split up Ember routes to files - Ready for building up logic of scenograph class

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -151,7 +151,7 @@ h1 a {
   text-align: inherit;
   padding-left: 0;
   padding-right: 0;
-  width: 48.5%;
+  width: 65.6666666666667%;
   margin-left: 0%;
   margin-right: 3%;
 }
@@ -174,7 +174,7 @@ h1 a {
   text-align: inherit;
   padding-left: 0;
   padding-right: 0;
-  width: 48.5%;
+  width: 31.3333333333333%;
   margin-left: 0%;
   margin-right: 3%;
 }
