--- a/views/templates/pages/about.jade
+++ b/views/templates/pages/about.jade
@@ -8,7 +8,13 @@ script(type="text/x-handlebars", id="about")
 				li Future Direction
 				li Github repos - Universe and main
 		#content
-			ul
-				| {{#each item in model}}
-				li {{item}}
-				| {{/each}}
+			h3 Introduction to the Langenium franchise
+			p Bacon ipsum dolor sit amet fatback drumstick ground round meatloaf shank t-bone bacon tri-tip ribeye turkey short loin flank. Capicola prosciutto salami spare ribs pork. Spare ribs swine jowl boudin beef. Bacon drumstick rump, fatback andouille ribeye prosciutto. Ham hock pork spare ribs ham chicken, doner short ribs. Drumstick bresaola landjaeger pork. Prosciutto shank porchetta pork pastrami tongue ham hock pork loin brisket frankfurter.
+			h3 How it began
+			p Flank hamburger landjaeger, filet mignon frankfurter andouille turducken sausage doner tongue beef pork loin jowl. Tongue shoulder corned beef beef ribeye fatback pork belly chuck ground round boudin kevin chicken shankle. Pastrami beef ribs ham t-bone. Meatloaf boudin strip steak bresaola, tri-tip pork shank venison leberkas ham hock.
+			h3 Current status
+			p Meatloaf cow turkey meatball pork chop pork belly sausage venison salami. Beef ribs doner corned beef ribeye pork belly. Shankle pig spare ribs, porchetta ham hock pork chop pork belly capicola t-bone pork loin andouille. Chicken tongue drumstick shoulder, boudin leberkas pig sirloin kevin short loin prosciutto tri-tip.
+			h3 Future Direction
+			p Boudin pork chop shoulder tenderloin jowl drumstick filet mignon pork. Pastrami pancetta pork belly frankfurter tail. Andouille salami bresaola, bacon sirloin ball tip turducken sausage leberkas shoulder. Short ribs tri-tip andouille shankle. Short ribs capicola tail landjaeger.
+			h3 Github repos - Universe and main
+			p Meatball chuck chicken ribeye, sirloin hamburger ham shank pastrami fatback venison spare ribs tenderloin. Bresaola short ribs drumstick pork belly tri-tip strip steak pancetta chuck t-bone filet mignon. Beef sausage tenderloin short loin pancetta swine fatback jowl tongue capicola. Ham chuck pork belly swine. 
