--- a/views/templates/pages/games.jade
+++ b/views/templates/pages/games.jade
@@ -2,11 +2,20 @@ script(type="text/x-handlebars", id="games")
 	#page
 		#sidebar
 			ul
-				li Epoch Exordium (Alpha)- /games/epoch-exordium (previously under /tests/epoch-exordium-test1.html)
-				li Langenium MMO Preview - /games/mmo-preview (previously /play)
-				li Prototypes - /games/prototypes/ Rapidly developed experiments for new functionality
+				li 	
+					| {{#link-to "epoch-exordium"}}
+					| Epoch Exordium
+					| {{/link-to}}
+				li 
+					| {{#link-to "mmo"}}
+					| Langenium MMO Preview
+					| {{/link-to}}
+				li Prototypes - Rapidly developed experiments for new functionality
 					ul
-						li Epoch Exordium
-						li Procedural Models
-						li Procedural Textures
+						| {{#each item in model}}
+						li 
+							| {{#link-to "prototypes" item.id}}
+							| {{item.title}}
+							| {{/link-to}}
+						| {{/each}}
 		#content
