Working on scenograph and Exordium Sol view

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -30,9 +30,17 @@ h5,
 h6 {
   font-family: 'Franchise';
 }
+html,
 body {
-  margin: 0;
   overflow: hidden;
+  margin: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+}
+body {
   font-family: arial;
   font-size: 75%;
   color: #fff;
