--- a/styles/styles.styl
+++ b/styles/styles.styl
@@ -5,9 +5,16 @@
 @import 'jeet'
 @import './shared/defaults.styl'
 
-body 
-	margin 0
+html, body
 	overflow hidden
+	margin 0
+	position absolute
+	left 0
+	top 0
+	right 0
+	bottom 0
+
+body 
 	font-family arial
 	font-size 75%
 	color #FFFFFF
