- Manually passing certain objects into Ember bindings for view template - Added scenograph options and outputted via binding... works PERFECTLY!! - Next step is to work on DAT.GUI integration and graphs as a kind of   toolbox to control the client - Need to also work on styles as the current look is a bit barren

--- a/views/templates/layout.jade
+++ b/views/templates/layout.jade
@@ -23,9 +23,9 @@ script(type="text/x-handlebars")
 						td Min
 						td Max
 					tr
-						td.fps
-						td.min
-						td.max
+						td {{fps.now}}
+						td {{fps.min}}
+						td {{fps.max}}
 			li#time.push-right
 				table
 					tr
@@ -35,10 +35,13 @@ script(type="text/x-handlebars")
 						td Delta Min
 						td Delta Max
 					tr
-						td.now
-						td.last
-						td.delta
-						td.delta-min
-						td.delta-max
-	h2 {{fpsNow}}
+						td {{time.now}}
+						td {{time.last}}
+						td {{time.delta}}
+						td {{time.deltaMin}}
+						td {{time.deltaMax}}
+			li
+				h3 Controls
+				{{input type="checkbox" checked=options.useControls}}
+	h2 
 	| {{outlet}}
