- dat.gui and Ember's Data Store can go fuck themselves. - dat.gui just cannot work with browserify, so I'm dumping it - The Ember DS class is a bitch to wrangle with. Need to abstract all   Scenograph stuff from ember_app stuff. - Going to build scene changing logic

--- a/views/templates/layout.jade
+++ b/views/templates/layout.jade
@@ -42,6 +42,7 @@ script(type="text/x-handlebars")
 						td {{time.deltaMax}}
 			li
 				h3 Controls
-				{{input type="checkbox" checked=options.useControls}}
+				| {{input type="checkbox" checked=options.useControls}}
+				| {{view Ember.Select content=options.scenes value=options.activeScene}}
 	h2 
 	| {{outlet}}
