--- a/views/templates/layout.jade
+++ b/views/templates/layout.jade
@@ -10,10 +10,6 @@ script(type="text/x-handlebars")
 			li {{#link-to 'about'}}About{{/link-to}}
 			li {{#link-to 'blog'}}Blog{{/link-to}}
 			li {{#link-to 'media'}}Media{{/link-to}}
-			li
-				h3 Controls
-				| {{input type="checkbox" checked=options.useControls}}
-				| {{view Ember.Select content=options.scenes value=options.activeScene}}
 			li#latency.push-right
 				table
 					tr
@@ -35,14 +31,10 @@ script(type="text/x-handlebars")
 					tr
 						td Now
 						td Last
-						td Current Delta
-						td Delta Min
-						td Delta Max
+						td Delta
 					tr
 						td {{time.now}}
 						td {{time.last}}
 						td {{time.delta}}
-						td {{time.deltaMin}}
-						td {{time.deltaMax}}
 	h2 
 	| {{outlet}}
