--- a/views/templates/layout.jade
+++ b/views/templates/layout.jade
@@ -20,12 +20,8 @@ script(type="text/x-handlebars")
 				table
 					tr
 						td FPS
-						td Min
-						td Max
 					tr
-						td {{fps.now}}
-						td {{fps.min}}
-						td {{fps.max}}
+						td {{fps.now}} ({{fps.min}}-{{fps.max}})
 			li#time.push-right
 				table
 					tr
