- Ember data SUCKS for websockets. Sticking to custom hooks - Got feed working... but the Graph API is too limiting - Begun work on FQL integration. Going to come up with some named queries   and use them as a basis for the various bits.

--- a/views/templates/pages/blog.jade
+++ b/views/templates/pages/blog.jade
@@ -3,10 +3,13 @@ script(type="text/x-handlebars", id="blog")
 		#sidebar
 			ul
 				| {{#each item in model}}
-				li 
+				li
+					<img {{bind-attr src=item.picture}} />
+					| {{item.created_time}} 
 					| {{#link-to 'posts' item.id}}
-					| {{item.title}}
+					| {{item.name}}
 					| {{/link-to}}
+					| {{item.created_time}}
 				| {{/each}}
 		#content
 			| {{outlet}}
