--- a/views/templates/pages/posts.jade
+++ b/views/templates/pages/posts.jade
@@ -1,3 +1,4 @@
 script(type="text/x-handlebars", id="posts")
-	h3 {{model.title}}
+	h3 {{model.name}}
+	<img {{bind-attr src=model.picture}} />
 	p {{model.description}}
