- Jquery Cycle is being difficult - Going to ditch Ember as well. These frameworks promise a lot but are   just a nightmare to wrangle into actually working. - Going to rebuild as a single HTML solution. Content will be sent via   socket from hard coded arrays. Will write my own router/DOM binding   class to replace Ember.

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,7 @@ html
 		include templates/pages/blog
 		include templates/pages/posts
 		include templates/pages/media
+		include templates/pages/article
 
 		script(src="scripts/vendor/jquery.js")
 		script(src="scripts/vendor/jquery.cycle2.js")
@@ -23,6 +24,7 @@ html
 		script(src="scripts/vendor/Mirror.js")
 		script(src="scripts/vendor/OrbitControls.js")
 		script(src="scripts/vendor/dat.gui.js")
+		script(src="scripts/vendor/moment.min.js")
 		script(src="socket.io/socket.io.js")
 		script(type='x-shader/x-vertex', id='haloVertShader')
 			include shaders/halo.vert
