--- a/views/templates/pages/posts.jade
+++ b/views/templates/pages/posts.jade
@@ -1,4 +1,4 @@
 script(type="text/x-handlebars", id="posts")
-	h3 {{model.name}}
+	h3 {{model.cut_message}}
 	<img {{bind-attr src=model.picture}} />
-	p {{model.description}}
+	p {{model.message}}
